# lite-3Dgsplat-codec

./: .licenseignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  LGSC-api-example1.cpp  LGSCCommon.cpp  LGSCCommon.h  LGSCDecoder.cpp  LGSCDecoder.h  LGSCEncoder.cpp  LGSCEncoder.h  LGSCMisc.h  attributes.h  lgsc_chrono.cpp  lgsc_chrono.h  parameters.h
test/: decoder-inria.cfg  encoder-inria.cfg
